--- a/book.bib
+++ b/book.bib
@@ -704,6 +704,12 @@
   publisher = {Chapman and Hall/CRC}
 }
 
+@article{hoogendoorn2017_book,
+  title={Machine Learning for the Quantified Self},
+  author={Hoogendoorn, Mark and Funk, Burkhardt},
+  year={2017},
+  publisher={Springer}
+}
 
 @Article{Hufford2002,
   author  = {Hufford, Michael R. and Shields, Alan L. and Shiffman, Saul and Paty, Jean and Balabanis, Mark},
@@ -1385,6 +1391,16 @@ year = {1999}
   keywords  = {Ecological momentary assessment,Experience samplin,assessment reactivity,ballegooijen,correspondence,depression,ecological momentary assessment,experience sampling,mobile health,mood,nl,smartphones,van,vu,w},
   publisher = {BMC Psychiatry},
   url       = {http://bmcpsychiatry.biomedcentral.com/articles/10.1186/s12888-016-1065-5},
+}
+
+
+@inproceedings{vanBreda2016,
+  title={A feature representation learning method for temporal datasets},
+  author={van Breda, Ward and Hoogendoorn, Mark and Eiben, AE and Andersson, Gerhard and Riper, Heleen and Ruwaard, Jeroen and Vernmark, Kristofer},
+  booktitle={Computational Intelligence (SSCI), 2016 IEEE Symposium Series on},
+  pages={1--8},
+  year={2016},
+  organization={IEEE}
 }
 
 
